# scrambleverse-native-win32

./: .editorconfig  CMakeLists.txt
include/scrambleverse/win32/: error.hpp  event.hpp  file_mapping.hpp  handle.hpp  handle_base.hpp  process.hpp  view_of_file.hpp  wide_char.hpp
src/: error.cpp  event.cpp  file_mapping.cpp  handle.cpp  macros.h  process.cpp  view_of_file.cpp
test/: error.cpp  event.cpp  file_mapping.cpp  process.cpp  wide_char.cpp
